refactor: refactor services and models